archive/도커심화_한권으로_배우는_도커_&_쿠버네티스/ch10/ex02/flask-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-ingress	
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2	
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /test02(/|$)(.*)	
        pathType: Prefix
        backend:
          service:
            name: flask-service	
            port:
              number: 80
